--- a/signature_lyon.html
+++ b/signature_lyon.html
@@ -10,7 +10,7 @@
       <p style="margin: 0px; padding-bottom: 0px; font-size: 14px; font-family: Arial, Helvetica, sans-serif; font-weight:bold;">Prénom NOM - 名字</p>
       <p style="margin: 0px; padding-bottom: 0px; font-size: 11px; font-family: Arial, Helvetica, sans-serif; color:#ff0042;"><i>- Votre Fonction -</i></p><br/>
       <p style="margin: 0px; padding-bottom: 0px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;">+33 (0)6 00 00 00 00</p>
-      <p style="margin: 0px; padding-bottom: 0px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;">prenom.nom@ineat-conseil.fr</p>
+      <p style="margin: 0px; padding-bottom: 0px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;">pnom@ineat.fr</p>
       <p style="margin-top:10px; margin-bottom: 0px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;">INEAT Lyon <br/> 18/20 rue Tronchet<br/>69006 Lyon – France</p>
       <p style="margin: 0px; padding-bottom: 0px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;">www.ineat-group.com</p>
      </td>
